tests/errors/sem_assignment_double.kt
fun main() {
    val x: Double = 5.5
    val y: Int = x 
}
